--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" type="text/css" href="assets/css/style.css">
     <link rel="stylesheet" type="text/css" href="assets/css/reset.css">
     <link href="https://fonts.googleapis.com/css?family=Audiowide" rel="stylesheet">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 
     <!-- Latest compiled and minified CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
@@ -23,7 +24,7 @@
 
   <div class="container">
     <div class="row" id="header">
-      <div class="col-md-12"><h1>Crystals Collector!</h1>
+      <div class="col-md-12"><p>Crystals Collector!</p>
     </div>
   </div>
 
@@ -51,12 +52,13 @@
     <div class="col-md-1" id="randomNumber">#</div>
     <div class="col-md-1"></div>
     <div class="col-md-2" id="gameStats">
-      <p>Wins: </p>
-      <p>Losses: </p>
+      <p>Wins: <span id="wins"></span></p>
+      <p>Losses: <span id="losses"></span></p>
     </div>
     <div class="col-md-4"></div>
   </div>
 
+<br>
 <br>
 
   <div class="row" id="crystals">
@@ -64,22 +66,23 @@
   </div>
 
   <div class="col-md-2">
-    <img src="assets/images/ruby.jpg" class="img-responsive button" alt="Ruby">
+    <img src="assets/images/ruby.jpg" class="img-responsive button" alt="Ruby" id="rubyButton">
     </div>
 
     <div class="col-md-2">
-    <img src="assets/images/saphire.jpg" class="img-responsive button" alt="Saphire">
+    <img src="assets/images/saphire.jpg" class="img-responsive button" alt="Saphire" id="saphireButton">
     </div>
 
     <div class="col-md-2">
-    <img src="assets/images/gem.jpg" class="img-responsive button" alt="Gem">
+    <img src="assets/images/gem.jpg" class="img-responsive button" alt="Gem" id="gemButton">
     </div>
 
     <div class="col-md-2">
-    <img src="assets/images/emerald.jpg" class="img-responsive button" alt="Emerald">
+    <img src="assets/images/emerald.jpg" class="img-responsive button" alt="Emerald" id="emeraldButton">
     </div>
   </div>
 
+  <br>
   <br>
 
     <div class="row" id="scoreHeader">
@@ -89,7 +92,7 @@
   <br>
 
    <div class="row" id="score">
-    <div class="col-md-12">Score</div>
+    <div class="col-md-12"></div>
   </div>
 </div>
 
