--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
   <br>
 
    <div class="row" id="score">
-    <div class="col-md-12"></div>
+    <div class="col-md-12">0</div>
   </div>
 </div>
 
