--- a/index.html
+++ b/index.html
@@ -49,13 +49,15 @@
 
   <div class="row" id="gameComponents">
     <div class="col-md-4"></div>
-    <div class="col-md-1" id="randomNumber">#</div>
+    <div class="col-md-2" id="goal">
+      <p>Goal: <span id="randomNumber"></span></p>
+    </div>
     <div class="col-md-1"></div>
     <div class="col-md-2" id="gameStats">
       <p>Wins: <span id="wins"></span></p>
       <p>Losses: <span id="losses"></span></p>
     </div>
-    <div class="col-md-4"></div>
+    <div class="col-md-3"></div>
   </div>
 
 <br>
